# Playleast

./: .gitignore  README.md  database.py  main.py  pyproject.toml  utils_playlist.py  utils_sync.py  views.py  youtube_analysis.py
templates/: index.html  playlist.html  sync_history.html
