[tool.poetry]
name = "tube-stats"
version = "0.1.0"
description = ""
authors = ["subhamsarangi <subhamsarangi2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.169.0"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
pandas = "^2.2.3"
xlsxwriter = "^3.2.3"
isodate = "^0.7.2"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.40"
requests = "^2.32.3"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
